tests/cases_invalid/tokens/unexpected/.expected
error: unexpected token
 --> ./cases_invalid/tokens/unexpected/main.shd:1:1
  |
1 | à
  | ^ here
  |
